# n-d

./: .gitattributes  .gitignore  .gitmodules  Makefile  README.md  compose.yml  load-test.js
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile
backend/migrations/: 20251020233304_dumb.down.sql  20251020233304_dumb.up.sql  20251024001930_add_database_indexes.down.sql  20251024001930_add_database_indexes.up.sql
backend/provisioning/dashboards/: k6-simple-dashboard.json
backend/provisioning/datasources/: influxdb.yml
backend/src/: config.rs  database.rs  errors.rs  lib.rs  main.rs  redis.rs  routes.rs
backend/src/handlers/: auth_handler.rs  book_handler.rs  chapter_handler.rs  genre_handler.rs  health_handler.rs  mod.rs
backend/src/middleware/: api_key.rs  auth.rs  mod.rs
backend/src/models/: auth_model.rs  book_model.rs  chapter_model.rs  genre_model.rs  mod.rs  paging_model.rs  response_model.rs  user_model.rs
backend/src/services/: auth_service.rs  book_service.rs  chapter_service.rs  genre_service.rs  mod.rs
backend/src/utils/: jwt.rs  password.rs
