[package]
name = "novel-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
anyhow = "1.0.100"
argon2 = "0.5.3"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
jsonwebtoken = "9.2"
rand_core = "0.9.3"
thiserror = "2.0.17"
tracing = "0.1.41"
tower = "0.5.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = "0.20.0"
log = "0.4.28"
cuid2 = "0.1.4"
http = "1.3.1"
tower-cookies = "0.11"
time = "0.3"
